Fixed dark mode in mobile

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,7 +6,7 @@
     @apply bg-gray-800 text-zinc-50
 }
 
-.top-navigation-icon,.footer-icon {
+.top-navigation-icon {
     @apply text-gray-500
     mr-3 ml-4
     transition duration-300 ease-in-out 
